[package]
name = "ticket-lock-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"                    # Web framework
tokio = { version = "1", features = ["full"] }  # Async runtime
serde = { version = "1", features = ["derive"] }  # JSON serialization
serde_json = "1"
dotenv = "0.15"                  # Environment variables
redis = { version = "0.23", features = ["tokio-comp"] }  # Redis async client
uuid = { version = "1", features = ["v4"] }  # Generate unique IDs
colored = "2.0"
thiserror = "1.0"


